@@ -11,6 +11,7 @@ AC_CONFIG_HEADER([config.h])
 AC_PROG_CXX
 AC_PROG_CC
 AC_PROG_RANLIB
+KSW_IS_PROFILE
 KSW_IS_DEBUG
 
 # Checks for libraries.
@@ -74,6 +75,8 @@ AC_SUBST(QT_CXXFLAGS)
 AC_SUBST(DLOPEN_LIBS)
 AC_SUBST(HAVE_QT4)
 AC_SUBST(BYTEORDER)
+AC_SUBST(PROFILE)
+AC_SUBST(CORE_PROFILE)
 
 if test x"${QT_LIBS}" = x; then
    echo ""
