@@ -19,10 +19,10 @@ mm3d_SOURCES = \
 	stdtools.cc \
 	$(mm3d_HFILES)
 
-mm3d_LDADD = $(QGL_LIBS) $(QT_LIBS) $(LUALIB_LIBS) $(GL_LIBS) $(DLOPEN_LIBS) tools/libtools.a commands/libcommands.a implui/libimplui.a qtui/libqtui.a depui/libdepui.a mm3dcore/libmm3dcore.a libmm3d/libmm3d.a
+mm3d_LDADD = $(CORE_PROFILE) $(QGL_LIBS) $(QT_LIBS) $(LUALIB_LIBS) $(GL_LIBS) $(DLOPEN_LIBS) tools/libtools.a commands/libcommands.a implui/libimplui.a qtui/libqtui.a depui/libdepui.a mm3dcore/libmm3dcore.a libmm3d/libmm3d.a
 mm3d_LDFLAGS = $(all_libraries) $(QT_CXXFLAGS)
 
-AM_CPPFLAGS = -DQT_COMPAT -Wall -Ilibmm3d -Imm3dcore -Idepui -Iqtui -Iimplui -Itools -Icommands -DMM3D_EDIT $(all_includes) $(QT_CXXFLAGS) $(LUALIB_CCFLAGS) $(GL_CFLAGS)
+AM_CPPFLAGS = $(CORE_PROFILE) -DQT_COMPAT -Wall -Ilibmm3d -Imm3dcore -Idepui -Iqtui -Iimplui -Itools -Icommands -DMM3D_EDIT $(all_includes) $(QT_CXXFLAGS) $(LUALIB_CCFLAGS) $(GL_CFLAGS)
 
 %.moc.cc: %.h
 		$(QT_MOC) -o $@ $<
