@@ -23,7 +23,7 @@ libdepui_a_SOURCES = \
 %.moc.cc: %.h
 		$(QT_MOC) -o $@ $<
 
-AM_CPPFLAGS = -DQT_COMPAT -Wall -I../libmm3d -I../mm3dcore -I../ -DMM3D_EDIT $(all_includes) $(QT_CXXFLAGS) $(LUALIB_CCFLAGS) $(GL_CFLAGS)
+AM_CPPFLAGS = $(CORE_PROFILE) -DQT_COMPAT -Wall -I../libmm3d -I../mm3dcore -I../ -DMM3D_EDIT $(all_includes) $(QT_CXXFLAGS) $(LUALIB_CCFLAGS) $(GL_CFLAGS)
 
 CLEANFILES = $(libdepui_MOC)
 
